updated in setting and example

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,14 @@ DATABASE_URL=True
 # DB_PASSWORD=AVNS_53N8PXX4cz39klNvsiz
 # DB_PORT=25060
 
+# for local db
+
+# DB_HOST=localhost
+# DB_NAME=gprodb
+# DB_USER=postgres
+# DB_PASSWORD=admin
+# DB_PORT=5432
+
 #Production DB
 
 DB_HOST=kbgpr-db-23-aug-1-backup-do-user-13088384-0.k.db.ondigitalocean.com
